--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <hr>
 <div>
     <center><h3>Instagram</h3></center>
+    <center><img src="pappuCU.jpg" alt=""></center>
     <Center><small><a href="https://www.instagram.com/taseen.zim/">click here</a> to follow me</small></Center>
 </div>
 <body>
