--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtFp9Jb8z4WW1sjDi7JyGazeevJBdC6AbyXA&usqp=CAU" type="image/x-icon">
     <link rel="stylesheet" href="third.css">
 </head>
-<h1>The Social Media Platform We know</h1>
+<h1>The Social Media Platform We know how to use</h1>
 <hr>
 <div>
     <center><h3>Instagram</h3></center>
